# tive

./: Cargo.toml
src/: chat.rs  client.rs  host.rs  logger.rs  main.rs  message.rs  shared.rs  tui.rs
src/widget/: message.rs  mod.rs  status_bar.rs
