[package]
name = "tive"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.98"
crossterm = { version = "0.28.1", features = ["event-stream"] }
futures-util = "0.3.31"
ratatui = { version = "0.29.0", features = ["unstable-widget-ref"] }
reqwest = { version = "0.12.15", features = ["stream"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
directories = "6.0.0"
nix = { version = "0.30.0", features = ["fs", "signal"] }
futures = "0.3.31"
inotify = "0.11.0"
async-stream = "0.3.6"
tui-input = "0.12.0"
